// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DescribedComponent /> renders 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <ForwardRef(Bootstrap(Tooltip))
      className="Tooltip"
      id="tooltip"
    >
      test description
    </ForwardRef(Bootstrap(Tooltip))>
  }
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <p>
    child
  </p>
</OverlayTrigger>
`;

exports[`<DescribedComponent /> renders with custom position 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <ForwardRef(Bootstrap(Tooltip))
      className="Tooltip"
      id="tooltip"
    >
      test description
    </ForwardRef(Bootstrap(Tooltip))>
  }
  placement="top"
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <p>
    child
  </p>
</OverlayTrigger>
`;

exports[`<DescribedComponent /> renders with custom show/hide delay 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  delay={3000}
  overlay={
    <ForwardRef(Bootstrap(Tooltip))
      className="Tooltip"
      id="tooltip"
    >
      test description
    </ForwardRef(Bootstrap(Tooltip))>
  }
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <p>
    child
  </p>
</OverlayTrigger>
`;

exports[`<DescribedComponent /> renders with custom style 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <ForwardRef(Bootstrap(Tooltip))
      className="Tooltip"
      id="tooltip"
    >
      test description
    </ForwardRef(Bootstrap(Tooltip))>
  }
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <p>
    child
  </p>
</OverlayTrigger>
`;

exports[`<DescribedComponent /> renders with custom trigger 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <ForwardRef(Bootstrap(Tooltip))
      className="Tooltip"
      id="tooltip"
    >
      test description
    </ForwardRef(Bootstrap(Tooltip))>
  }
  trigger="hover"
>
  <p>
    child
  </p>
</OverlayTrigger>
`;

exports[`<DescribedComponent /> renders with default show 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  defaultShow={true}
  overlay={
    <ForwardRef(Bootstrap(Tooltip))
      className="Tooltip"
      id="tooltip"
    >
      test description
    </ForwardRef(Bootstrap(Tooltip))>
  }
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <p>
    child
  </p>
</OverlayTrigger>
`;

exports[`<DescribedComponent /> renders with no description 1`] = `
<span>
  <p>
    child
  </p>
</span>
`;
